--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ a {
   text-decoration: none !important;
 }
 #root {
-  background: rgb(4 47 46) !important;
+  background: #03002e!important;
   color: #fff;
 }
 .App {
